--- a/stockmgmt/templates/add_items.html
+++ b/stockmgmt/templates/add_items.html
@@ -1,6 +1,12 @@
+{% load static %}
+{% load crispy_forms_tags%}
+{% include 'base.html' %}
 <!DOCTYPE html>
 
 <html>
+    <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +16,16 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <div class="container bg-light">
+        {{title|linebreaks}}
+        <div class="jumbotron"
         <form method="POST" action="">
         {% csrf_token %}
-        {{form}}
+        {{form|crispy}}
         <input type="submit" value="Save"> </input>
         </form>        
+        </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
