--- a/stockmgmt/templates/list_items.html
+++ b/stockmgmt/templates/list_items.html
@@ -1,6 +1,11 @@
+{% load static %}
+{% include 'base.html' %}
 <!DOCTYPE html>
 
 <html>
+    <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +15,31 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        {% for instance in queryset %}
-        {{ instance.item_name}}, {{instance.quantity}}
-        {% endfor %}
+        <div role="main" class="container bg-light">
+        <div class="header"> 
+            {{title}}
+        </div>
+        <div class="display_table">
+        <table class='table'>
+        <thead>
+          <tr>
+            <th>COUNT</th>
+            <th>CATEGORY</th>
+            <th>ITEM NAME</th>
+            <th>QUANTITY IN STORE</th>
+          </tr>
+        </thead>
+      {% for instance in queryset %}
+          <tr>
+            <td>{{forloop.counter}}</td>
+            <td>{{instance.category}}</td>
+            <td>{{instance.item_name}}</td>
+            <td>{{instance.quantity}}</td>
+          </tr>
+      {% endfor %}
+    </table>
+    </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
