--- a/stockmgmt/templates/delete_items.html
+++ b/stockmgmt/templates/delete_items.html
@@ -1,6 +1,7 @@
 {% load static %}
-{% load crispy_forms_tags%}
+{% load crispy_forms_tags %}
 {% include 'base.html' %}
+
 <!DOCTYPE html>
 
 <html>
@@ -10,7 +11,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Add Items</title>
+        <title>Delete Items</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
@@ -22,7 +23,11 @@
         <form method="POST" action="">
         {% csrf_token %}
         {{form|crispy}}
-        <input type="submit" value="Save"/> 
+        <h1> Are you sure you want to delete ? </h1> <br>
+        <input class='btn btn-danger' type="submit" value="Yes" />
+        
+        <a href="/list_items"> <div class="btn btn-primary"> Cancel </div></a>
+        
         </form>        
         </div>
         </div>
