--- a/stockmgmt/templates/list_items.html
+++ b/stockmgmt/templates/list_items.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags%}
 {% include 'base.html' %}
 <!DOCTYPE html>
 
@@ -19,6 +20,12 @@
         <div class="header"> 
             {{title}}
         </div>
+        <form method="POST" action="">
+        {% csrf_token %}
+        {{form|crispy}}
+        <input type="submit" value="Search"/>
+        </form>
+
         <div class="display_table">
         <table class='table'>
         <thead>
@@ -27,14 +34,16 @@
             <th>CATEGORY</th>
             <th>ITEM NAME</th>
             <th>QUANTITY IN STORE</th>
+            <th>DELETE</th>
           </tr>
         </thead>
       {% for instance in queryset %}
           <tr>
             <td>{{forloop.counter}}</td>
             <td>{{instance.category}}</td>
-            <td>{{instance.item_name}}</td>
+            <td><a href="{% url 'update_items' instance.id %}"> {{instance.item_name}} </a></td>
             <td>{{instance.quantity}}</td>
+            <td><a href="{% url 'delete_items' instance.id %}"> Delete</a></td>
           </tr>
       {% endfor %}
     </table>
