Export data to csv, add notification and choice field using foreign key.

--- a/stockmgmt/static/css/stylesheet.css
+++ b/stockmgmt/static/css/stylesheet.css
@@ -22,3 +22,8 @@ body {
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
 }
+
+.success {
+    text-align: center;
+    background-color: darkslategray;
+}
