add loginPage and improve UI

--- a/stockmgmt/static/css/stylesheet.css
+++ b/stockmgmt/static/css/stylesheet.css
@@ -23,7 +23,7 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
-.success {
+.messages {
     text-align: center;
-    background-color: darkslategray;
+    background-color:floralwhite;
 }
