--- a/stockmgmt/templates/base.html
+++ b/stockmgmt/templates/base.html
@@ -27,9 +27,11 @@
             <a class="nav-link" href="/list_items" tabindex="-1" aria-disabled="true">List Items</a>
         </li>
         </ul>
-        <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <form method="post" action="logoutUser/">
+        {% csrf_token %}
+        {% comment %} <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button> {% endcomment %}
+        <button class="btn btn-outline-success" type="submit">Logout</button>
         </form>
     </div>
 </div>
