--- a/stockmgmt/templates/list_items.html
+++ b/stockmgmt/templates/list_items.html
@@ -17,16 +17,17 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+ 
+        <div role="main" class="container bg-light">
         {% if messages %}
-        <ul class="messages">
+        <div class="messages">
         {% for message in messages %}
           <li {% if message.tags %} class="{{message.tags}}"
               {% endif %}> {{message}} </li>
         {% endfor %}
-        </ul>
+        </div>
         {% endif %}
-        
-        <div role="main" class="container bg-light">
+       
         <div class="header"> 
             {{title}}
         </div>
