--- a/stockmgmt/templates/list_items.html
+++ b/stockmgmt/templates/list_items.html
@@ -45,6 +45,8 @@
             <th>CATEGORY</th>
             <th>ITEM NAME</th>
             <th>QUANTITY IN STORE</th>
+            <th>TIMESTAMP</th>
+            <th>LAST UPDATED</th>
             <th>DELETE</th>
           </tr>
         </thead>
@@ -54,6 +56,8 @@
             <td>{{instance.category}}</td>
             <td><a href="{% url 'update_items' instance.id %}"> {{instance.item_name}} </a></td>
             <td>{{instance.quantity}}</td>
+            <td> {{instance.timestamp}} </td>
+            <td> {{instance.last_updated}} </td>
             <td><a href="{% url 'delete_items' instance.id %}"> <i class="fas fa-trash-alt"> </i> </a> </td>
           </tr>
       {% endfor %}
