connect MySQL database, set reorder_level

--- a/stockmgmt/templates/loginUser.html
+++ b/stockmgmt/templates/loginUser.html
@@ -1,3 +1,5 @@
+{% comment %} user : karan   pass : karan {% endcomment %}
+
 <!DOCTYPE html>
 {% comment %} karan karan1234 {% endcomment %}
 <html>
