--- a/stockmgmt/templates/list_items.html
+++ b/stockmgmt/templates/list_items.html
@@ -45,6 +45,7 @@
             <th>CATEGORY</th>
             <th>ITEM NAME</th>
             <th>QUANTITY IN STORE</th>
+            <th>REORDER LEVEL </th>
             <th>TIMESTAMP</th>
             <th>LAST UPDATED</th>
             <th>DELETE</th>
@@ -55,7 +56,14 @@
             <td>{{forloop.counter}}</td>
             <td>{{instance.category}}</td>
             <td><a href="{% url 'update_items' instance.id %}"> {{instance.item_name}} </a></td>
-            <td><a href="{% url 'stock_detail' instance.id %}"> {{instance.quantity}} </a></td>
+            <td>
+              {% if instance.quantity <= instance.reorder_level %}
+                <div style="background-color : orange; "><a href="{% url 'stock_detail' instance.id %}"> {{instance.quantity}} </a> </div>
+              {% else %}
+                <a href="{% url 'stock_detail' instance.id %}"> {{instance.quantity}} </a>
+              {% endif %}
+            </td>
+            <td> <a href="{%url 'reorder_level' instance.id %}">{{instance.reorder_level}} </a> </td>
             <td> {{instance.timestamp}} </td>
             <td> {{instance.last_updated}} </td>
             <td><a href="{% url 'delete_items' instance.id %}"> <i class="fas fa-trash-alt"> </i> </a> </td>
