--- a/stockmgmt/templates/home.html
+++ b/stockmgmt/templates/home.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include 'base.html' %}
+{% include 'nav.html' %}
 <!DOCTYPE html>
 
 <html>
@@ -14,7 +14,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-
+        <h1> Welcome, You have successfully logged in. </h1>
         <script src="" async defer></script>
     </body>
 </html>
