--- a/stockmgmt/templates/base.html
+++ b/stockmgmt/templates/base.html
@@ -1,38 +1,139 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<div class="container-fluid">
-    <a class="navbar-brand" href="#">Stock Management</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/add_items">Add Items</a>
-        </li>
-        {% comment %} <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul> {% endcomment %}
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/list_items" tabindex="-1" aria-disabled="true">List Items</a>
-        </li>
-        </ul>
-        <form method="post" action="logoutUser/">
-        {% csrf_token %}
-        {% comment %} <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button> {% endcomment %}
-        <button class="btn btn-outline-success" type="submit">Logout</button>
-        </form>
+{% load static %}
+{% load crispy_forms_tags%}
+{% comment %}
+sql user : root     pass : admin 
+sqluser user : karan   pass : karan {% endcomment %}
+
+<!DOCTYPE html>
+{% comment %} karan_k Karan@1234 {% endcomment %}
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Login</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    
+        <style>
+        body {
+        font-family: "Lato", sans-serif;
+        }
+
+        .main-head{
+        height: 150px;
+        background: #FFF;
+        }
+
+        .sidenav {
+        height: 100%;
+        background-color: #000;
+        overflow-x: hidden;
+        padding-top: 20px;
+        }
+
+        .main {
+        padding: 0px 10px;
+        }
+
+        @media screen and (max-height: 450px) {
+        .sidenav {padding-top: 15px;}
+        }
+
+        @media screen and (max-width: 450px) {
+        .login-form{
+            margin-top: 10%;
+        }
+
+        .register-form{
+            margin-top: 10%;
+        }
+        }
+
+        @media screen and (min-width: 768px){
+        .main{
+            margin-left: 40%; 
+        }
+
+        .sidenav{
+            width: 40%;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+        }
+
+        .login-form{
+            margin-top: 80%;
+        }
+
+        .register-form{
+            margin-top: 20%;
+        }
+        }
+
+
+        .login-main-text{
+        margin-top: 20%;
+        padding: 60px;
+        color: #fff;
+        }
+
+        .login-main-text h2{
+        font-weight: 300;
+        }
+
+        .btn-black{
+        background-color: #000 !important;
+        color: #fff;
+        }
+        </style>
+    </head>
+    <body>
+
+<!------ Include the above in your HEAD tag ---------->
+
+    <div class="sidenav">
+        <div class="login-main-text">
+            <h2>Application<br> Login Page</h2>
+            <p>Login or register from here to access.</p>
+        </div> 
     </div>
-</div>
-</nav>
+      {% block title %}
+      {% endblock  %}
+    <div class="container col-md-2 col-sm-12">
+    <div class='login-form mar'>
+      {% block content %}
+        <form method="POST" action="">
+        {% csrf_token %}
+        {{form|crispy}}
+        </form>        
+    
+        {% comment %} <div class="main">
+        <div class="col-md-6 col-sm-12">
+            <div class="login-form">
+                <form method="POST" action="/">
+                    {% csrf_token %}   
+                    <div class="form-group">
+                        <label>User Name</label>
+                        <input type="text" class="form-control" name='username' placeholder="User Name">
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" class="form-control" name='password' placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-dark">Login</button>
+                </form>
+            </div>
+        </div>
+        </div>  {% endcomment %}
+      {% endblock %}
+    </div>  
+    </div>
+    <script src="" async defer></script>
+
+    </body>
+</html>
