--- a/stockmgmt/templates/nav.html
+++ b/stockmgmt/templates/nav.html
@@ -26,13 +26,11 @@
         <li class="nav-item">
             <a class="nav-link" href="/list_items" tabindex="-1" aria-disabled="true">List Items</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/list_history"> List History </a>
+        </li>
         </ul>
-        {% comment %}<form method="post" action="logoutUser/">
-        {% csrf_token %}
-         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-        <button class="btn btn-outline-success" type="submit">Logout</button> 
-        </form> {% endcomment %}
+
         <ul class="navbar-nav">
         {% if request.user.is_authenticated %}
         <li><a href="/"><button class="btn btn-danger">{{ user }} | Logout</button></a></li>
