--- a/stockmgmt/templates/add_items.html
+++ b/stockmgmt/templates/add_items.html
@@ -17,13 +17,19 @@
     </head>
     <body>
         <div class="container bg-light">
-        {{title|linebreaks}}
+        <div class="header"> 
+          {{title}}
+        </div>
         <div class="jumbotron">
+        <div class="row justify-content-center">
+        <div class="col-sm-4">
         <form method="POST" action="">
         {% csrf_token %}
         {{form|crispy}}
-        <input type="submit" value="Save"/> 
+        <input type="submit" class="btn btn-primary mybutton" value="Save"/> 
         </form>        
+        </div>
+        </div>
         </div>
         </div>
         <script src="" async defer></script>
