--- a/stockmgmt/templates/list_items.html
+++ b/stockmgmt/templates/list_items.html
@@ -1,77 +1,84 @@
 {% load static %}
-{% load crispy_forms_tags%}
+{% load crispy_forms_tags %}
 {% include 'nav.html' %}
 <!DOCTYPE html>
 
 <html>
-    <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-      <!-- Font-Awesome CDN -->
+  <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <!-- Font-Awesome CDN -->
   <script src="https://kit.fontawesome.com/529cf4d149.js" crossorigin="anonymous"></script>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title{{title}}></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title{{title}}></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+  </head>
+  <body>
  
-        <div role="main" class="container bg-light">
-        {% if messages %}
-        <div class="messages">
-        {% for message in messages %}
-          <li {% if message.tags %} class="{{message.tags}}"
-              {% endif %}> {{message}} </li>
-        {% endfor %}
-        </div>
-        {% endif %}
-       
-        <div class="header"> 
-            {{title}}
-        </div>
-        <form method="POST" action="">
-        {% csrf_token %}
-        {{form|crispy}}
-        <input type="submit" value="Search"/>
-        </form>
-
-        <div class="display_table">
-        <table class='table'>
-        <thead>
-          <tr>
-            <th>COUNT</th>
-            <th>CATEGORY</th>
-            <th>ITEM NAME</th>
-            <th>QUANTITY IN STORE</th>
-            <th>REORDER LEVEL </th>
-            <th>TIMESTAMP</th>
-            <th>LAST UPDATED</th>
-            <th>DELETE</th>
-          </tr>
-        </thead>
-      {% for instance in queryset %}
-          <tr>
-            <td>{{forloop.counter}}</td>
-            <td>{{instance.category}}</td>
-            <td><a href="{% url 'update_items' instance.id %}"> {{instance.item_name}} </a></td>
-            <td>
-              {% if instance.quantity <= instance.reorder_level %}
-                <div style="background-color : orange; "><a href="{% url 'stock_detail' instance.id %}"> {{instance.quantity}} </a> </div>
-              {% else %}
-                <a href="{% url 'stock_detail' instance.id %}"> {{instance.quantity}} </a>
-              {% endif %}
-            </td>
-            <td> <a href="{%url 'reorder_level' instance.id %}">{{instance.reorder_level}} </a> </td>
-            <td> {{instance.timestamp}} </td>
-            <td> {{instance.last_updated}} </td>
-            <td><a href="{% url 'delete_items' instance.id %}"> <i class="fas fa-trash-alt"> </i> </a> </td>
-          </tr>
+    <div role="main" class="container bg-light">
+      {% if messages %}
+      <div class="messages">
+      {% for message in messages %}
+        <li {% if message.tags %} class="{{message.tags}}"
+            {% endif %}> {{message}} </li>
       {% endfor %}
-    </table>
-    </div>
+      </div>
+      {% endif %}
+    
+      <div class="header"> 
+          {{title}}
+      </div>
+      <div class="row">
+        <div class="col-sm-2">
+          <form method="POST" action="">
+          {% csrf_token %}
+          {{form|crispy}}
+          <br>
+          <input type="submit" class="btn btn-primary mybutton" value="Search"> </input>
+          </form>
+          {% comment %} <a href="/add_items"><div class="btn btn-primary myButton">Add Items</div></a><br><br>
+          <a href="/list_history"><div class="btn btn-primary mybutton">List History</div></a><br> {% endcomment %}
         </div>
-        <script src="" async defer></script>
-    </body>
+        <div class="col-sm-10">
+          <div class="display_table">
+          <table class='table'>
+          <thead>
+            <tr>
+              <th>COUNT</th>
+              <th>CATEGORY</th>
+              <th>ITEM NAME</th>
+              <th>QUANTITY IN STORE</th>
+              <th>REORDER LEVEL </th>
+              <th>TIMESTAMP</th>
+              <th>LAST UPDATED</th>
+              <th>DELETE</th>
+            </tr>
+          </thead>
+          {% for instance in queryset %}
+              <tr>
+                <td>{{forloop.counter}}</td>
+                <td>{{instance.category}}</td>
+                <td><a href="{% url 'update_items' instance.id %}"> {{instance.item_name}} </a></td>
+                <td>
+                  {% if instance.quantity <= instance.reorder_level %}
+                    <div style="background-color : orange; "><a href="{% url 'stock_detail' instance.id %}"> {{instance.quantity}} </a> </div>
+                  {% else %}
+                    <a href="{% url 'stock_detail' instance.id %}"> {{instance.quantity}} </a>
+                  {% endif %}
+                </td>
+                <td> <a href="{%url 'reorder_level' instance.id %}">{{instance.reorder_level}} </a> </td>
+                <td> {{instance.timestamp}} </td>
+                <td> {{instance.last_updated}} </td>
+                <td><a href="{% url 'delete_items' instance.id %}"> <i class="fas fa-trash-alt"> </i> </a> </td>
+              </tr>
+          {% endfor %}
+          </table>
+          </div>
+        </div>
+    </div>
+    <script src="" async defer></script>
+  </body>
 </html>
