--- a/stockmgmt/templates/list_items.html
+++ b/stockmgmt/templates/list_items.html
@@ -52,7 +52,7 @@
               <th>ITEM NAME</th>
               <th>QUANTITY IN STORE</th>
               <th>REORDER LEVEL </th>
-              <th>TIMESTAMP</th>
+              <th>PRICE</th>
               <th>LAST UPDATED</th>
               <th>DELETE</th>
             </tr>
@@ -70,7 +70,7 @@
                   {% endif %}
                 </td>
                 <td> <a href="{%url 'reorder_level' instance.id %}">{{instance.reorder_level}} </a> </td>
-                <td> {{instance.timestamp}} </td>
+                <td> {{instance.prod_price}} </td>
                 <td> {{instance.last_updated}} </td>
                 <td><a href="{% url 'delete_items' instance.id %}"> <i class="fas fa-trash-alt"> </i> </a> </td>
               </tr>
